# SPTcpp

./: .gitignore  LICENSE  LICENSE.md  README.md  SPARHTACUSII.sln
PWFWIN/: LICENSE.lic  PWFCP_status.txt  PWFWIN.sln  PWFWIN.vcxproj  PWF_status.txt
SPTLNX/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
SPTWIN/: SPTWIN.sln  SPTWIN.vcxproj
src/: C_Afluencia.cpp  C_Afluencia.h  C_AgrupamentoIntercambio.cpp  C_AgrupamentoIntercambio.h  C_ArranjoResolucao.cpp  C_ArranjoResolucao.h  C_Auxiliar.h  C_BaciaHidrografica.cpp  C_BaciaHidrografica.h  C_ConjuntoHidraulico.cpp  C_ConjuntoHidraulico.h  C_Contrato.cpp  C_Contrato.h  C_ControleCotaVazao.cpp  C_ControleCotaVazao.h  C_CorteBenders.cpp  C_CorteBenders.h  C_Dados.cpp  C_Dados.h  C_Dados_CP.cpp  C_Dados_MP.cpp  C_Defluencia.cpp  C_Defluencia.h  C_DemandaEspecial.cpp  C_DemandaEspecial.h  C_DiscretizacaoTemporal.cpp  C_DiscretizacaoTemporal.h  C_ElementoSistema.cpp  C_ElementoSistema.h  C_EntradaSaidaDados.cpp  C_EntradaSaidaDados.h  C_Eolica.cpp  C_Eolica.h  C_EquacaoRealizacao.cpp  C_EquacaoRealizacao.h  C_EstagioOtimizacao.cpp  C_EstagioOtimizacao.h  C_EstruturaResultados.h  C_FuncaoProducaoHidreletrica.cpp  C_FuncaoProducaoHidreletrica.h  (+89 more)
